app/src/main/java/com/example/fail/Sys.kt
package com.example.fail

data class Sys(
    val pod: String
)